.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:38:59 **** Incremental Build of configuration Release for project Assignment6 ****
make all 
Building file: ../src/Assignment6.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment6.d" -MT"src/Assignment6.o" -o "src/Assignment6.o" "../src/Assignment6.cpp"
Finished building: ../src/Assignment6.cpp
 
Building file: ../src/graph_imp.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/graph_imp.d" -MT"src/graph_imp.o" -o "src/graph_imp.o" "../src/graph_imp.cpp"
Finished building: ../src/graph_imp.cpp
 
Building target: Assignment6
Invoking: GCC C++ Linker
g++  -o "Assignment6"  ./src/Assignment6.o ./src/graph_imp.o   
Finished building target: Assignment6
 
22:39:03 **** Incremental Build of configuration Debug for project Assignment6 ****
make all 
Building file: ../src/graph_imp.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/graph_imp.d" -MT"src/graph_imp.o" -o "src/graph_imp.o" "../src/graph_imp.cpp"
Finished building: ../src/graph_imp.cpp
 
Building target: Assignment6
Invoking: GCC C++ Linker
g++  -o "Assignment6"  ./src/Assignment6.o ./src/graph_imp.o   
Finished building target: Assignment6
 
22:39:53 **** Incremental Build of configuration Release for project Assignment6 ****
make all 
Building file: ../src/graph_imp.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/graph_imp.d" -MT"src/graph_imp.o" -o "src/graph_imp.o" "../src/graph_imp.cpp"
Finished building: ../src/graph_imp.cpp
 
Building target: Assignment6
Invoking: GCC C++ Linker
g++  -o "Assignment6"  ./src/Assignment6.o ./src/graph_imp.o   
Finished building target: Assignment6
 
22:39:55 **** Incremental Build of configuration Debug for project Assignment6 ****
make all 
Building file: ../src/graph_imp.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/graph_imp.d" -MT"src/graph_imp.o" -o "src/graph_imp.o" "../src/graph_imp.cpp"
Finished building: ../src/graph_imp.cpp
 
Building target: Assignment6
Invoking: GCC C++ Linker
g++  -o "Assignment6"  ./src/Assignment6.o ./src/graph_imp.o   
Finished building target: Assignment6
 
22:40:48 **** Incremental Build of configuration Debug for project Assignment6 ****
make all 
make: Nothing to be done for 'all'.
22:41:00 **** Incremental Build of configuration Debug for project Assignment6 ****
make all 
make: Nothing to be done for 'all'.
22:49:00 **** Incremental Build of configuration Debug for project Assignment6 ****
make all 
Building file: ../src/graph_imp.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/graph_imp.d" -MT"src/graph_imp.o" -o "src/graph_imp.o" "../src/graph_imp.cpp"
Finished building: ../src/graph_imp.cpp
 
Building target: Assignment6
Invoking: GCC C++ Linker
g++  -o "Assignment6"  ./src/Assignment6.o ./src/graph_imp.o   
Finished building target: Assignment6
 
23:34:13 **** Build of configuration Release for project Assignment6 ****
make all 
Building file: ../src/Assignment6.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment6.d" -MT"src/Assignment6.o" -o "src/Assignment6.o" "../src/Assignment6.cpp"
Finished building: ../src/Assignment6.cpp
 
Building file: ../src/graph_imp.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/graph_imp.d" -MT"src/graph_imp.o" -o "src/graph_imp.o" "../src/graph_imp.cpp"
../src/graph_imp.cpp: In member function ‘bool User::friendExists(char*)’:
../src/graph_imp.cpp:94:26: error: ‘s’ was not declared in this scope
   temp = temp->dlink->fr;s
                          ^
src/subdir.mk:21: recipe for target 'src/graph_imp.o' failed
make: *** [src/graph_imp.o] Error 1
23:34:22 **** Incremental Build of configuration Release for project Assignment6 ****
make all 
Building file: ../src/graph_imp.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/graph_imp.d" -MT"src/graph_imp.o" -o "src/graph_imp.o" "../src/graph_imp.cpp"
Finished building: ../src/graph_imp.cpp
 
Building target: Assignment6
Invoking: GCC C++ Linker
g++  -o "Assignment6"  ./src/Assignment6.o ./src/graph_imp.o   
Finished building target: Assignment6
 
23:35:54 **** Clean-only build of configuration Debug for project Assignment6 ****
make clean 
rm -rf  ./src/Assignment6.o ./src/graph_imp.o  ./src/Assignment6.d ./src/graph_imp.d  Assignment6
 
23:35:54 **** Incremental Build of configuration Debug for project Assignment6 ****
make all 
Building file: ../src/Assignment6.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Assignment6.d" -MT"src/Assignment6.o" -o "src/Assignment6.o" "../src/Assignment6.cpp"
Finished building: ../src/Assignment6.cpp
 
Building file: ../src/graph_imp.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/graph_imp.d" -MT"src/graph_imp.o" -o "src/graph_imp.o" "../src/graph_imp.cpp"
Finished building: ../src/graph_imp.cpp
 
Building target: Assignment6
Invoking: GCC C++ Linker
g++  -o "Assignment6"  ./src/Assignment6.o ./src/graph_imp.o   
Finished building target: Assignment6
 
23:58:10 **** Incremental Build of configuration Release for project Assignment6 ****
make all 
Building file: ../src/graph_imp.cpp
Invoking: GCC C++ Compiler
g++ -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/graph_imp.d" -MT"src/graph_imp.o" -o "src/graph_imp.o" "../src/graph_imp.cpp"
Finished building: ../src/graph_imp.cpp
 
Building target: Assignment6
Invoking: GCC C++ Linker
g++  -o "Assignment6"  ./src/Assignment6.o ./src/graph_imp.o   
Finished building target: Assignment6
 
23:58:30 **** Incremental Build of configuration Debug for project Assignment6 ****
make all 
Building file: ../src/graph_imp.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/graph_imp.d" -MT"src/graph_imp.o" -o "src/graph_imp.o" "../src/graph_imp.cpp"
Finished building: ../src/graph_imp.cpp
 
Building target: Assignment6
Invoking: GCC C++ Linker
g++  -o "Assignment6"  ./src/Assignment6.o ./src/graph_imp.o   
Finished building target: Assignment6
 
